force-app/main/default/objects/FinServ__Employment__c/FinServ__Employment__c.object-meta.xml
<CustomObject>
    <description>Represents information about a person&#39;s employment history.</description>
    <label>Employment</label>
    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>