force-app/main/default/objects/FinServ__Employment__c/fields/AmlStatus__c.field-meta.xml
<CustomField>
    <fullName>AmlStatus__c</fullName>
    <defaultValue>&quot;Not required&quot;</defaultValue>
    <description>Indicates whether or not we have completed AML for this employer</description>
    <label>AML Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>