force-app/main/default/objects/FinServ__Employment__c/fields/Average_bonus__c.field-meta.xml
<CustomField>
    <fullName>Average_bonus__c</fullName>
    <label>Average Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>