force-app/main/default/objects/FinServ__Employment__c/fields/BankAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>BankAccountStatus__c</fullName>
    <defaultValue>&quot;Not required&quot;</defaultValue>
    <description>Indicates whether we have received bank account details for this employer</description>
    <label>Bank account status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>