force-app/main/default/objects/FinServ__Employment__c/fields/Business_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Business_Dividends__c</fullName>
    <label>Business Dividends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>