force-app/main/default/objects/FinServ__Employment__c/fields/CompanyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegistrationNumber__c</fullName>
    <description>The CRN is a unique identifier for a company, automatically assigned by Companies House when a company is incorporated and valid for the lifetime of the company. 
You can find the CRN on the certificate of incorporation, on any official documentation from Companies House, and on the public register of companies. 
CRNs typically consist of 8 digits (e.g., 06488522) or two letters followed by six numbers (e.g., SC06488522). 
The CRN is distinct from a company&#39;s tax number, which is issued by HMRC for tax-related purposes.</description>
    <inlineHelpText>The CRN is a unique identifier for a company, automatically assigned by Companies House when a company is incorporated and valid for the lifetime of the company. 
You can find the CRN on the certificate of incorporation, on any official documentation from Companies House, and on the public register of companies. 
CRNs typically consist of 8 digits (e.g., 06488522) or two letters followed by six numbers (e.g., SC06488522).</inlineHelpText>
    <label>Company registration number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>