force-app/main/default/objects/FinServ__Employment__c/fields/EmployerContributionsSetUpBy__c.field-meta.xml
<CustomField>
    <fullName>EmployerContributionsSetUpBy__c</fullName>
    <description>Indicates whether the client can provide the employer bank details directly themselves</description>
    <label>Employer contributions set up by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employer HR department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>