force-app/main/default/objects/FinServ__Employment__c/fields/FF_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>FF_Session_ID__c</fullName>
    <label>FF Session ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>