force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__EndDate__c.field-meta.xml
<CustomField>
    <fullName>FinServ__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>