force-app/main/default/objects/FinServ__Employment__c/fields/FinServ__Position__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Position__c</fullName>
    <label>Position</label>
    <length>150</length>
    <type>Text</type>
</CustomField>