force-app/main/default/objects/FinServ__Employment__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Household</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household on the Employment check object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment (Household)</relationshipLabel>
    <relationshipName>Employment1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>