force-app/main/default/objects/FinServ__Employment__c/fields/Income_from_Pensions_Annuities__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Pensions_Annuities__c</fullName>
    <label>Income from Pensions &amp; Annuities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>