force-app/main/default/objects/FinServ__Employment__c/fields/Income_from_Savings_Investments__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Savings_Investments__c</fullName>
    <label>Income from Savings &amp; Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>