force-app/main/default/objects/FinServ__Employment__c/fields/Other_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <label>Other Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>