force-app/main/default/objects/FinServ__Employment__c/fields/OW_profile_visibility__c.field-meta.xml
<CustomField>
    <fullName>OW_profile_visibility__c</fullName>
    <description>Displays to users whether this employment record is visible to the customer in the profile.</description>
    <formula>IF( ISBLANK( OW_latest_update__c ), &quot;ERROR: no update linked&quot;, IF( ISPICKVAL( OW_latest_update__r.Deleted_By__c, &quot;&quot; ), &quot;Visible&quot;, &quot;Hidden&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tells you whether this employment is visible to the customer in the profile.</inlineHelpText>
    <label>Profile visibility</label>
    <type>Text</type>
</CustomField>