force-app/main/default/objects/FinServ__Employment__c/fields/OW_status__c.field-meta.xml
<CustomField>
    <fullName>OW_status__c</fullName>
    <description>Captures whether this employment is current or former.</description>
    <inlineHelpText>If current, this will be visible to the customer in the portal. Otherwise, the employment record should be hidden.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Deleted by client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>