force-app/main/default/objects/FinServ__Employment__c/fields/Pensions_Annuity_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Pensions_Annuity_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <label>Pensions &amp; Annuity Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>