force-app/main/default/objects/FinServ__Employment__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Person Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The customer must belong the household specified on this employment record.</errorMessage>
        <filterItems>
            <field>Account.Account_record_type_mimic__c</field>
            <operation>notEqual</operation>
            <value>Household</value>
        </filterItems>
        <filterItems>
            <field>Account.Household_Lookup__c</field>
            <operation>equals</operation>
            <valueField>$Source.Household__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>Employment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>