force-app/main/default/objects/FinServ__Employment__c/fields/PlatformId__c.field-meta.xml
<CustomField>
    <fullName>PlatformId__c</fullName>
    <description>To store the external ID of the employment in Nova service</description>
    <externalId>true</externalId>
    <label>Platform ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>