force-app/main/default/objects/FinServ__Employment__c/fields/PlatformLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedBy__c</fullName>
    <description>Record the name of the person who last modified the record in nova service, this will either be the client in the portal or a colleague.</description>
    <label>Platform last modified by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>