force-app/main/default/objects/FinServ__Employment__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <inlineHelpText>No longer used / visible to the customer following updates in Sep 2023</inlineHelpText>
    <label>Total Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>