force-app/main/default/objects/FinServ__Employment__c/fields/Total_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <inlineHelpText>No longer used / visible to the customer following updates in Sep 2023</inlineHelpText>
    <label>Total Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>