force-app/main/default/objects/FinServ__Employment__c/recordTypes/Not_Currently_Working.recordType-meta.xml
<RecordType>
    <fullName>Not_Currently_Working</fullName>
    <active>true</active>
    <label>Not Currently Working</label>
</RecordType>