force-app/main/default/objects/FinServ__Employment__c/recordTypes/Retirement_Income.recordType-meta.xml
<RecordType>
    <fullName>Retirement_Income</fullName>
    <active>true</active>
    <label>Retirement Income</label>
</RecordType>