force-app/main/default/objects/FinServ__Employment__c/validationRules/FinServ__EndDateCannotBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>FinServ__EndDateCannotBeInFuture</fullName>
    <active>true</active>
    <description>Error message when the employment end date is in the future.</description>
    <errorConditionFormula>FinServ__EndDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>The end date can&#39;t be in the future.</errorMessage>
</ValidationRule>